--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <link href="assets/img/favicon-32x32.png" rel="icon">
     <link href="assets/img/site.webmanifest" rel="manifest">
     <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+    <!--Font Awesome-->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.14.0/devicon.min.css">
 
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -32,6 +34,7 @@
 </head>
 
 <body>
+    <div><i class="fab fa-github"></i></div>
 
     <!-- ======= Mobile nav toggle button ======= -->
     <!-- <button type="button" class="mobile-nav-toggle d-xl-none"><i class="bi bi-list mobile-nav-toggle"></i></button> -->
@@ -62,7 +65,6 @@
         </div>
     </section><!-- End Hero -->
 
-    <hr />
 
     <main id="main">
 
@@ -81,6 +83,7 @@
 
             </div>
         </section><!-- End About Section -->
+        <hr />
         <!-- ======= Skills Section ======= -->
         <section id="skills" class="skills section-bg">
             <div class="container" data-aos="fade-up">
@@ -157,85 +160,108 @@
 
             </div>
         </section><!-- End Skills Section -->
-
+        <hr />
         <!-- ======= Projects Section ======= -->
         <section id="portfolio" class="portfolio section-bg">
             <div class="container" data-aos="fade-up">
 
                 <div class="section-title">
-                    
+
                     <h2>Eleven Fifty Acadamy Projects</h2>
                     <p>Here's a collection of the projects I started while attending EFA. They've become pet projects-in-progress, not to be considered completed works of art.</p>
                 </div>
                 <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
+                    <div>
 
-                    <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-                        <div class="portfolio-wrap">
-                            <img src="assets/img/portfolio/Capture.jpg" class="img-fluid" alt="">
-                            <div class="portfolio-info">
-                                <h4>Creature</h4>
-                                <p>using(HTML/CSS)</p>
-                                <div class="portfolio-links">
-                                    <a href="portfolio-details1.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-book-content"></i></a>
+                        <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+                            <h3 class="text-center">Intro to HTML/CSS </h3>
+                            <div class="portfolio-wrap">
+                                <img src="assets/img/portfolio/Capture.jpg" class="img-fluid" alt="">
+                                <div class="portfolio-info">
+                                    <h4>Creature</h4>
+                                    <p>using(HTML/CSS)</p>
+                                    <div class="portfolio-links">
+                                        <a href="https://github.com/jessesoutherland/Creature" title="GitHub"><i class="devicon-github-original colored"></i></a>
+                                    </div>
                                 </div>
                             </div>
+                            <p>
+                                I created this creature using basic HTML/CSS code. It is the first thing created by yours truly, and he's quite the handsome devil if I do say so myself.
+                            </p>
                         </div>
                     </div>
-
                     <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+                        <h2 class="text-center">HTML/CSS Take Two</h2>
                         <div class="portfolio-wrap">
                             <img src="assets/img/portfolio/Capture1.jpg" class="img-fluid" alt="">
                             <div class="portfolio-info">
                                 <h4>Guitar Heaven</h4>
                                 <p>using(HTML/CSS)</p>
                                 <div class="portfolio-links">
-                                    <a href="portfolio-details2.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-book-content"></i></a>
+                                    <a href="https://github.com/jessesoutherland/Guritar-Heaven-Home-Page" title="GitHub"><i class="devicon-github-original colored"></i></a>
                                 </div>
                             </div>
                         </div>
+                        <br />
+                        <p>
+                            This homepage is my second stab at creating with HTML/CSS. Except this time, the focus was web design.
+                        </p>
                     </div>
 
                     <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+                        <h2 class="text-center">Intro to C#</h2>
                         <div class="portfolio-wrap">
                             <img src="assets/img/portfolio/Capture2.jpg" class="img-fluid" alt="">
                             <div class="portfolio-info">
                                 <h4>Komodo App</h4>
                                 <p>using(C#)</p>
                                 <div class="portfolio-links">
-                                    <a href="portfolio-details3.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-book-content"></i></a>
+                                    <a href="https://github.com/jessesoutherland/Komodo_Insurance" title="GitHub"><i class="devicon-github-original colored"></i></a>
                                 </div>
                             </div>
                         </div>
+                        <p>
+                            KIA is my first project utilizing C#. It's a management app for an insurance company that has an on-site cafe. The app manages the cafe, the insurance claims, and the employee badge access for each door.<br />As you can see from the slides, each section allows for basic CRUD functions relevant to the subject.
+                        </p>
                     </div>
 
                     <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+                        <h2 class="text-center">Intro to APIs</h2>
                         <div class="portfolio-wrap">
                             <img src="assets/img/portfolio/Capture11.jpg" class="img-fluid" alt="">
                             <div class="portfolio-info">
                                 <h4>ZlorpShack<br />Reading<br />Program</h4>
-                                <p>using(API)</p>
+                                <p>using(C# | API)</p>
                                 <div class="portfolio-links">
-                                    <a href="portfolio-details4.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-book-content"></i></a>
+                                    <a href="https://github.com/cnbrown2021/ZlorpShack" title="GitHub"><i class="devicon-github-original colored"></i></a>
                                 </div>
                             </div>
                         </div>
+                        <p>
+                            Welcome to the ZlorpShack Reading Program! Not to be confused with that other program from back in the day.<br />ZlorpShack was my first experience working with a team through a shared GitHub repository and my first experience working with APIs and databases.<br />Our app allowed for basic CRUD endpoints of multiple tables while utilizing foreign key relationships.
+                        </p>
                     </div>
 
                     <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+                        <h2 class="text-center">Intro to MVC</h2>
                         <div class="portfolio-wrap">
                             <img src="assets/img/portfolio/Capture10.jpg" class="img-fluid" alt="">
                             <div class="portfolio-info">
                                 <h4>Let's Jam</h4>
-                                <p>using(MVC)</p>
+                                <p>using(HTML/CSS | C# <br /> API | MVC)</p>
                                 <div class="portfolio-links">
-                                    <a href="portfolio-details5.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-book-content"></i></a>
+                                    <a href="https://letsjamwebmvc.azurewebsites.net/" title="Azure"><i class="devicon-azure-plain colored"></i></a>
                                 </div>
                             </div>
                         </div>
+                        <p>
+                            This is my pride and joy. It's not much, but it's the coolest thing I've created so far.<br />This is an app for music store owners who also give music lessons. It keeps track of customers, students, products, sales, and enrollments, allowing for basic CRUD functions for each.<br />Some cool features include but are not limited to: automated inventory control, automated student status update, and super detailed views utilizing foreign key relationships.
+                        </p>
                     </div>
                 </div>
             </div>
         </section><!-- End Portfolio Section -->
+        <hr />
         <!-- ======= Contact Section ======= -->
         <section id="contact" class="contact">
             <div class="container" data-aos="fade-up">
@@ -267,7 +293,7 @@
 
                     <div class="col-lg-8 mt-5 mt-lg-0">
 
-                        <form action="mail.php" method="POST" class="php-email-form">
+                        <form action="https://formspree.io/f/xlezrvdp" method="POST" class="php-email-form">
                             <div class="row">
                                 <div class="col-md-6 form-group">
                                     <input type="text" name="name" class="form-control" placeholder="Your Name" required>
@@ -325,7 +351,7 @@
     <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
     <script src="assets/vendor/typed.js/typed.min.js"></script>
     <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
-    <script src="mail.php"></script>
+    <link src="https://fontawesome.com/v5.15/icons/github" crossorigin="anonymous">
 
     <!-- Main JS File -->
     <script src="assets/js/main.js"></script>
