--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                     <div class="col-lg-4 col-md-6 portfolio-item filter-web">
                         <h2 class="text-center">HTML/CSS Take Two</h2>
                         <div class="portfolio-wrap">
-                            <img src="assets/img/portfolio/Capture1.jpg" class="img-fluid" alt="">
+                            <img src="assets/img/portfolio/Capture1.JPG" class="img-fluid" alt="">
                             <div class="portfolio-info">
                                 <h4>Guitar Heaven</h4>
                                 <p>using(HTML/CSS)</p>
@@ -211,7 +211,7 @@
                     <div class="col-lg-4 col-md-6 portfolio-item filter-app">
                         <h2 class="text-center">Intro to C#</h2>
                         <div class="portfolio-wrap">
-                            <img src="assets/img/portfolio/Capture2.jpg" class="img-fluid" alt="">
+                            <img src="assets/img/portfolio/Capture2.JPG" class="img-fluid" alt="">
                             <div class="portfolio-info">
                                 <h4>Komodo App</h4>
                                 <p>using(C#)</p>
@@ -245,7 +245,7 @@
                     <div class="col-lg-4 col-md-6 portfolio-item filter-card">
                         <h2 class="text-center">Intro to MVC</h2>
                         <div class="portfolio-wrap">
-                            <img src="assets/img/portfolio/Capture10.jpg" class="img-fluid" alt="">
+                            <img src="assets/img/portfolio/Capture10.JPG" class="img-fluid" alt="">
                             <div class="portfolio-info">
                                 <h4>Let's Jam</h4>
                                 <p>using(HTML/CSS | C# <br /> API | MVC)</p>
