--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                 <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
                     <div>
 
-                        <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+                        <div class="col-lg-4 col-md-6 portfolio-item filter-card">
                             <h3 class="text-center">Intro to HTML/CSS </h3>
                             <div class="portfolio-wrap">
                                 <img src="assets/img/portfolio/Capture.jpg" class="img-fluid" alt="">
