--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                 <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
                     <div>
 
-                        <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+                        <div class="col-lg-4 col-md-6 portfolio-item filter-app">
                             <h3 class="text-center">Intro to HTML/CSS </h3>
                             <div class="portfolio-wrap">
                                 <img src="assets/img/portfolio/Capture.jpg" class="img-fluid" alt="">
@@ -245,7 +245,7 @@
                     <div class="col-lg-4 col-md-6 portfolio-item filter-card">
                         <h2 class="text-center">Intro to MVC</h2>
                         <div class="portfolio-wrap">
-                            <img src="assets/img/portfolio/Capture10.JPG" class="img-fluid" alt="">
+                            <img src="assets/img/portfolio/Capture10." class="img-fluid" alt="">
                             <div class="portfolio-info">
                                 <h4>Let's Jam</h4>
                                 <p>using(HTML/CSS | C# <br /> API | MVC)</p>
