--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
                     <div class="col-lg-4 col-md-6 portfolio-item filter-card">
                         <h2 class="text-center">Intro to MVC</h2>
                         <div class="portfolio-wrap">
-                            <img src="assets/img/portfolio/Capture10." class="img-fluid" alt="">
+                            <img src="assets/img/portfolio/Capture3.JPG" class="img-fluid" alt="">
                             <div class="portfolio-info">
                                 <h4>Let's Jam</h4>
                                 <p>using(HTML/CSS | C# <br /> API | MVC)</p>
