--- a/index.html
+++ b/index.html
@@ -174,28 +174,26 @@
                     <div>
 
                         <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-                            <h3 class="text-center">Intro to HTML/CSS </h3>
+                            <h3 class="text-center">Creature </h3>
                             <div class="portfolio-wrap">
                                 <img src="assets/img/portfolio/Capture4.jpg" class="img-fluid" alt="">
                                 <div class="portfolio-info">
-                                    <h4>Creature</h4>
                                     <p>using(HTML/CSS)</p>
                                     <div class="portfolio-links">
                                         <a href="https://github.com/jessesoutherland/Creature" title="GitHub"><i class="devicon-github-original colored"></i></a>
                                     </div>
                                 </div>
                             </div>
-                            <p>
+                            <p class="text-center">
                                 I created this creature using basic HTML/CSS code. It is the first thing created by yours truly, and he's quite the handsome devil if I do say so myself.
                             </p>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-                        <h2 class="text-center">HTML/CSS Take Two</h2>
+                        <h2 class="text-center">Guitar Heaven</h2>
                         <div class="portfolio-wrap">
                             <img src="assets/img/portfolio/Capture1.JPG" class="img-fluid" alt="">
                             <div class="portfolio-info">
-                                <h4>Guitar Heaven</h4>
                                 <p>using(HTML/CSS)</p>
                                 <div class="portfolio-links">
                                     <a href="https://github.com/jessesoutherland/Guritar-Heaven-Home-Page" title="GitHub"><i class="devicon-github-original colored"></i></a>
@@ -203,30 +201,29 @@
                             </div>
                         </div>
                         <br />
-                        <p>
+                        <p class="text-center">
                             This homepage is my second stab at creating with HTML/CSS. Except this time, the focus was web design.
                         </p>
                     </div>
 
                     <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-                        <h2 class="text-center">Intro to C#</h2>
+                        <h2 class="text-center">Komodo Ins. App</h2>
                         <div class="portfolio-wrap">
                             <img src="assets/img/portfolio/Capture2.JPG" class="img-fluid" alt="">
                             <div class="portfolio-info">
-                                <h4>Komodo App</h4>
                                 <p>using(C#)</p>
                                 <div class="portfolio-links">
                                     <a href="https://github.com/jessesoutherland/Komodo_Insurance" title="GitHub"><i class="devicon-github-original colored"></i></a>
                                 </div>
                             </div>
                         </div>
-                        <p>
+                        <p class="text-center">
                             KIA is my first project utilizing C#. It's a management app for an insurance company that has an on-site cafe. The app manages the cafe, the insurance claims, and the employee badge access for each door.<br />As you can see from the slides, each section allows for basic CRUD functions relevant to the subject.
                         </p>
                     </div>
 
                     <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-                        <h2 class="text-center">Intro to APIs</h2>
+                        <h2 class="text-center">ZlorpShack</h2>
                         <div class="portfolio-wrap">
                             <img src="assets/img/portfolio/Capture11.jpg" class="img-fluid" alt="">
                             <div class="portfolio-info">
@@ -237,24 +234,24 @@
                                 </div>
                             </div>
                         </div>
-                        <p>
+                        <p class="text-center">
                             Welcome to the ZlorpShack Reading Program! Not to be confused with that other program from back in the day.<br />ZlorpShack was my first experience working with a team through a shared GitHub repository and my first experience working with APIs and databases.<br />Our app allowed for basic CRUD endpoints of multiple tables while utilizing foreign key relationships.
                         </p>
                     </div>
 
                     <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-                        <h2 class="text-center">Intro to MVC</h2>
+                        <h2 class="text-center">Let's Jam</h2>
                         <div class="portfolio-wrap">
                             <img src="assets/img/portfolio/Capture3.JPG" class="img-fluid" alt="">
                             <div class="portfolio-info">
-                                <h4>Let's Jam</h4>
                                 <p>using(HTML/CSS | C# <br /> API | MVC)</p>
                                 <div class="portfolio-links">
                                     <a href="https://letsjamwebmvc.azurewebsites.net/" title="Azure"><i class="devicon-azure-plain colored"></i></a>
                                 </div>
                             </div>
                         </div>
-                        <p>
+                        <br />
+                        <p class="text-center">
                             This is my pride and joy. It's not much, but it's the coolest thing I've created so far.<br />This is an app for music store owners who also give music lessons. It keeps track of customers, students, products, sales, and enrollments, allowing for basic CRUD functions for each.<br />Some cool features include but are not limited to: automated inventory control, automated student status update, and super detailed views utilizing foreign key relationships.
                         </p>
                     </div>
