--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <p>I'm a <span class="typed" data-typed-items=" Dad, Veteran, Software Developer"></span></p>
             <div class="social-links">
                 <a href="https://www.linkedin.com/in/jesse-southerland/" class="linkedin"><i class="bx bxl-linkedin"><i class="ui-tooltip" title="LinkedIn"></i></i></a>
-                <a href="#"><i class="bx bx-file"> <i class="ui-tooltip" title="Resume"></i></i></a>
+                <a href="assets/1150resume.pdf"><i class="bx bx-file"> <i class="ui-tooltip" title="Resume"></i></i></a>
             </div>
         </div>
     </section><!-- End Hero -->
@@ -327,8 +327,10 @@
             <h3>Jesse Southerland</h3>
             <p>Let's work together to make this world a better place for all.</p>
             <div class="social-links">
-                <a href="https://www.linkedin.com/in/jesse-southerland/" class="linkedin"><i class="bx bxl-linkedin"<i class="ui-tooltip" title="LinkedIn"></i></i></a>
-                <a href="#"><i class="bx bx-file"<i class="ui-tooltip" title="Resume"></i></i></a>
+                <div class="social-links">
+                    <a href="https://www.linkedin.com/in/jesse-southerland/" class="linkedin"><i class="bx bxl-linkedin"><i class="ui-tooltip" title="LinkedIn"></i></i></a>
+                    <a href="assets/1150resume.pdf"><i class="bx bx-file"> <i class="ui-tooltip" title="Resume"></i></i></a>
+                </div>
             </div>
             <div class="credits">
                 Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a> Edited by Jesse Southerland
