--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
             <div class="social-links">
                 <div class="social-links">
                     <a href="https://www.linkedin.com/in/jesse-southerland/" class="linkedin"><i class="bx bxl-linkedin"><i class="ui-tooltip" title="LinkedIn"></i></i></a>
-                    <a href="assets/1150resume.pdf"><i class="bx bx-file"> <i label="Resume"></i></i></a>
+                    <a href="assets/1150resume.pdf"><i class="bx bx-file"> <i class="ui-tooltip" title="Resume"></i></i></a>
                 </div>
             </div>
             <div class="credits">
