--- a/index.html
+++ b/index.html
@@ -234,7 +234,6 @@
                                 </div>
                             </div>
                         </div>
-                        <p title="Free Web tutorials">W3Schools.com</p>
                         <p class="text-center">
                             Welcome to the ZlorpShack Reading Program! Not to be confused with that other program from back in the day.<br />ZlorpShack was my first experience working with a team through a shared GitHub repository and my first experience working with APIs and databases.<br />Our app allowed for basic CRUD endpoints of multiple tables while utilizing foreign key relationships.
                         </p>
@@ -329,9 +328,8 @@
             <p>Let's work together to make this world a better place for all.</p>
             <div class="social-links">
                 <div class="social-links">
-                    <a href="https://www.linkedin.com/in/jesse-southerland/" class="linkedin"><i class="bx bxl-linkedin" title="LinkedIn"></i></a>
-                    <a href="assets/1150resume.pdf"><i class="bx bx-file" title="Resume"></i></a>
-                    <p title="Free Web tutorials">W3Schools.com</p>
+                    <a href="https://www.linkedin.com/in/jesse-southerland/" title="LinkedIn" class="linkedin"><i class="bx bxl-linkedin" ></i></a>
+                    <a href="assets/1150resume.pdf" title="Resume"><i class="bx bx-file" ></i></a>
                 </div>
             </div>
             <div class="credits">
