--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <p>I'm a <span class="typed" data-typed-items=" Dad, Veteran, Software Developer"></span></p>
             <div class="social-links">
                 <a href="https://www.linkedin.com/in/jesse-southerland/" title="LinkedIn" class="linkedin"><i class="bx bxl-linkedin"><i class="ui-tooltip"></i></i></a>
-                <a href="assets/1150resume.docx" title="Resume"><i class="bx bx-file"></i></a>
+                <a href="assets/1150resume.pdf" title="Resume"><i class="bx bx-file"></i></a>
             </div>
         </div>
     </section><!-- End Hero -->
@@ -329,7 +329,7 @@
             <div class="social-links">
                 <div class="social-links">
                     <a href="https://www.linkedin.com/in/jesse-southerland/" title="LinkedIn" class="linkedin"><i class="bx bxl-linkedin" ></i></a>
-                    <a href="assets/1150resume.docx" title="Resume"><i class="bx bx-file" ></i></a>
+                    <a href="assets/1150resume.pdf" title="Resume"><i class="bx bx-file" ></i></a>
                 </div>
             </div>
             <div class="credits">
