portfolio details edit

--- a/index.html
+++ b/index.html
@@ -174,11 +174,11 @@
                     <div>
 
                         <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-                            <h3 class="text-center">Creature </h3>
+                            <h3 class="text-center"><u>Creature</u></h3>
                             <div class="portfolio-wrap">
                                 <img src="assets/img/portfolio/Capture4.jpg" class="img-fluid" alt="">
                                 <div class="portfolio-info">
-                                    <p>using(HTML/CSS)</p>
+                                    <p><strong>using(HTML/CSS)</strong></p>
                                     <div class="portfolio-links">
                                         <a href="https://github.com/jessesoutherland/Creature" title="GitHub"><i class="devicon-github-original colored"></i></a>
                                     </div>
@@ -190,11 +190,11 @@
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-                        <h2 class="text-center">Guitar Heaven</h2>
+                        <h3 class="text-center"><u>Guitar Heaven</u></h3>
                         <div class="portfolio-wrap">
                             <img src="assets/img/portfolio/Capture1.JPG" class="img-fluid" alt="">
                             <div class="portfolio-info">
-                                <p>using(HTML/CSS)</p>
+                                <p><strong>using(HTML/CSS)</strong></p>
                                 <div class="portfolio-links">
                                     <a href="https://github.com/jessesoutherland/Guritar-Heaven-Home-Page" title="GitHub"><i class="devicon-github-original colored"></i></a>
                                 </div>
@@ -207,44 +207,45 @@
                     </div>
 
                     <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-                        <h2 class="text-center">Komodo Ins. App</h2>
+                        <h3 class="text-center"><u>Komodo Ins. App</u></h3>
                         <div class="portfolio-wrap">
                             <img src="assets/img/portfolio/Capture2.JPG" class="img-fluid" alt="">
                             <div class="portfolio-info">
-                                <p>using(C#)</p>
+                                <p><strong>using(C#)</strong></p>
                                 <div class="portfolio-links">
                                     <a href="https://github.com/jessesoutherland/Komodo_Insurance" title="GitHub"><i class="devicon-github-original colored"></i></a>
                                 </div>
                             </div>
                         </div>
+                        <br />
                         <p class="text-center">
                             KIA is my first project utilizing C#. It's a management app for an insurance company that has an on-site cafe. The app manages the cafe, the insurance claims, and the employee badge access for each door.<br />As you can see from the slides, each section allows for basic CRUD functions relevant to the subject.
                         </p>
                     </div>
 
                     <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-                        <h2 class="text-center">ZlorpShack</h2>
+                        <h3 class="text-center"><u>ZlorpShack Reading Program</u></h3>
                         <div class="portfolio-wrap">
                             <img src="assets/img/portfolio/Capture11.jpg" class="img-fluid" alt="">
                             <div class="portfolio-info">
-                                <h4>ZlorpShack<br />Reading<br />Program</h4>
-                                <p>using(C# | API)</p>
+                                <p><strong>using(C# | API)</strong></p>
                                 <div class="portfolio-links">
                                     <a href="https://github.com/cnbrown2021/ZlorpShack" title="GitHub"><i class="devicon-github-original colored"></i></a>
                                 </div>
                             </div>
                         </div>
+                        <br />
                         <p class="text-center">
                             Welcome to the ZlorpShack Reading Program! Not to be confused with that other program from back in the day.<br />ZlorpShack was my first experience working with a team through a shared GitHub repository and my first experience working with APIs and databases.<br />Our app allowed for basic CRUD endpoints of multiple tables while utilizing foreign key relationships.
                         </p>
                     </div>
 
                     <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-                        <h2 class="text-center">Let's Jam</h2>
+                        <h3 class="text-center"><u>Let's Jam</u></h3>
                         <div class="portfolio-wrap">
                             <img src="assets/img/portfolio/Capture3.JPG" class="img-fluid" alt="">
                             <div class="portfolio-info">
-                                <p>using(HTML/CSS | C# <br /> API | MVC)</p>
+                                <p><strong>using(HTML/CSS | C# <br /> API | MVC)</strong></p>
                                 <div class="portfolio-links">
                                     <a href="https://letsjamwebmvc.azurewebsites.net/" title="Azure"><i class="devicon-azure-plain colored"></i></a>
                                 </div>
