--- a/index.html
+++ b/index.html
@@ -247,6 +247,7 @@
                             <div class="portfolio-info">
                                 <p><strong>using(HTML/CSS | C# <br /> API | MVC)</strong></p>
                                 <div class="portfolio-links">
+                                    <a href="https://github.com/jessesoutherland/LetsJam" title="GitHub"><i class="devicon-github-original colored"></i></a>
                                     <a href="https://letsjamwebmvc.azurewebsites.net/" title="Azure"><i class="devicon-azure-plain colored"></i></a>
                                 </div>
                             </div>
