--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
                         </div>
                         <br />
                         <p class="text-center">
-                            This is my pride and joy. It's not much, but it's the coolest thing I've created so far.<br />This is an app for music store owners who also give music lessons. It keeps track of customers, students, products, sales, and enrollments, allowing for basic CRUD functions for each.<br />Some cool features include but are not limited to: automated inventory control, automated student status update, and super detailed views utilizing foreign key relationships.
+                            This is my pride and joy. It's not much, but it's the coolest thing I've created so far.<br />This is an app for music store owners who also give music lessons. It keeps track of customers, students, products, sales, and enrollments, allowing for basic CRUD functions for each.<br />Some cool features include but are not limited to: automated inventory control, automated student status update, and super detailed views utilizing foreign key relationships. <br />Check it out thru the Azure link!<br /><br />Login with these credentials to see the app with preloaded data.<br /><b>Email:</b> example@email.com<br /><b>Password:</b> password
                         </p>
                     </div>
                 </div>
