project text edit

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                 <div class="section-title">
 
                     <h2>Eleven Fifty Acadamy Projects</h2>
-                    <p>Here's a collection of the projects I started while attending EFA. They've become pet projects-in-progress, not to be considered completed works of art.</p>
+                    <p>Here's a collection of the projects I started while attending EFA. They've become pet projects-in-progress, not to be considered completed works of art. If you hover over each picture (click, if you're on a mobile device) you'll be presented with the GitHub link to view the code.</p><br />
                 </div>
                 <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
                     <div>
@@ -185,12 +185,12 @@
                                 </div>
                             </div>
                             <p class="text-center">
-                                I created this creature using basic HTML/CSS code. It is the first thing created by yours truly, and he's quite the handsome devil if I do say so myself.
+                                This is the very first thing created by yours truly when learning html and css, and he's quite the handsome devil if I do say so myself.
                             </p>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-                        <h3 class="text-center"><u>Guitar Heaven</u></h3>
+                        <h3 class="text-center"><u>Guitar Heaven</u></h3><br />
                         <div class="portfolio-wrap">
                             <img src="assets/img/portfolio/Capture1.JPG" class="img-fluid" alt="">
                             <div class="portfolio-info">
@@ -207,7 +207,7 @@
                     </div>
 
                     <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-                        <h3 class="text-center"><u>Komodo Ins. App</u></h3>
+                        <h3 class="text-center"><u>Komodo Ins. App</u></h3><br />
                         <div class="portfolio-wrap">
                             <img src="assets/img/portfolio/Capture2.JPG" class="img-fluid" alt="">
                             <div class="portfolio-info">
@@ -224,7 +224,7 @@
                     </div>
 
                     <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-                        <h3 class="text-center"><u>ZlorpShack Reading Program</u></h3>
+                        <h3 class="text-center"><u>ZlorpShack Reading Program</u></h3><br />
                         <div class="portfolio-wrap">
                             <img src="assets/img/portfolio/Capture11.jpg" class="img-fluid" alt="">
                             <div class="portfolio-info">
@@ -241,7 +241,7 @@
                     </div>
 
                     <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-                        <h3 class="text-center"><u>Let's Jam</u></h3>
+                        <h3 class="text-center"><u>Let's Jam</u></h3><br />
                         <div class="portfolio-wrap">
                             <img src="assets/img/portfolio/Capture3.JPG" class="img-fluid" alt="">
                             <div class="portfolio-info">
@@ -254,7 +254,7 @@
                         </div>
                         <br />
                         <p class="text-center">
-                            This is my pride and joy. It's not much, but it's the coolest thing I've created so far.<br />This is an app for music store owners who also give music lessons. It keeps track of customers, students, products, sales, and enrollments, allowing for basic CRUD functions for each.<br />Some cool features include but are not limited to: automated inventory control, automated student status update, and super detailed views utilizing foreign key relationships. <br />Check it out thru the Azure link!<br /><br />Login with these credentials to see the app with preloaded data.<br /><b>Email:</b> example@email.com<br /><b>Password:</b> password
+                            This is my pride and joy. It's not much, but it's the coolest thing I've created so far.<br />This is an app for music store owners who also give music lessons. It keeps track of customers, students, products, sales, and enrollments, allowing for basic CRUD functions for each.<br />Some cool features include but are not limited to: automated inventory control, automated student status update, and super detailed views utilizing foreign key relationships. <br />Check it out thru the Azure link!<br /><br />Login with these credentials to see the app with preloaded data:<br><br /><b>Email:</b> example@email.com<br /><b>Password:</b> password
                         </p>
                     </div>
                 </div>
