--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                     </div>
                     <div class="col-lg-8 section-title" style="width: 450px; margin: auto">
                         <h2>About</h2>
-                        <p>Hi, my name is Jesse Southerland.<br />I enjoy pushing myself to grow and learn new things, helping others, and just about any game you can throw at me. I recently had the honor of becoming a father to a beautiful baby girl, which caused me to seriously evaluate my long-term goals and what I really wanted out of life. That started me on a journey that led me to the wonderful world of coding. <br />I recently completed the immersive, project-based software development bootcamp provided by Eleven Fifty Acadamy and I'm happy to say that I have a newfound passion with endless growth capabilities. <br />My goal now is to find a company that will satisfy my passions for continuous learning and growth, coding, and helping others, while allowing a balanced work/family lifestyle.</p>
+                        <p>Hi, my name is Jesse Southerland.<br />I enjoy pushing myself to grow and learn new things, helping others, and just about any game you can throw at me. A few years ago I had the honor of becoming a father to a beautiful baby girl, which caused me to seriously re-evaluate my long-term goals and what I really wanted out of life. That started me on a journey that led to the wonderful world of coding. <br />I completed the immersive, project-based software development bootcamp provided by Eleven Fifty Acadamy, which gave me a newfound passion with endless growth capabilities. <br />My goal now is to find a company that will satisfy my passions for continuous learning and growth, coding, and helping others, while allowing a balanced work/family lifestyle.</p>
                     </div>
                 </div>
 
@@ -255,9 +255,6 @@
                     <a href="https://www.linkedin.com/in/jesse-southerland/" title="LinkedIn" class="linkedin"><i class="bx bxl-linkedin" ></i></a>
                     <a href="assets/1150resume.pdf" title="Resume"><i class="bx bx-file" ></i></a>
                 </div>
-            </div>
-            <div class="credits">
-                Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a> Edited by Jesse Southerland
             </div>
         </div>
     </footer><!-- End Footer -->
