Update to portfolio

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <section id="hero" class="d-flex flex-column justify-content-center">
         <div class="container" data-aos="zoom-in" data-aos-delay="100">
             <h1>Jesse Southerland</h1>
-            <p>I'm a <span class="typed" data-typed-items=" Dad, Veteran, Software Developer"></span></p>
+            <p>I'm <span class="typed" data-typed-items="a father, a software developer, you're next employee?"></span></p>
             <div class="social-links">
                 <a href="https://www.linkedin.com/in/jesse-southerland/" title="LinkedIn" class="linkedin"><i class="bx bxl-linkedin"><i class="ui-tooltip"></i></i></a>
                 <a href="assets/Resume.docx" title="Resume"><i class="bx bx-file"></i></a>
@@ -76,7 +76,7 @@
                     </div>
                     <div class="col-lg-8 section-title" style="width: 450px; margin: auto">
                         <h2>About</h2>
-                        <p>Hi, my name is Jesse Southerland.<br />I enjoy pushing myself to grow and learn new things, helping others, and just about any game you can throw at me. A few years ago I had the honor of becoming a father to a beautiful baby girl, which caused me to seriously re-evaluate my long-term goals and what I really wanted out of life. That started me on a journey that led to the wonderful world of coding. <br />I completed the immersive, project-based software development bootcamp provided by Eleven Fifty Acadamy, which gave me a newfound passion with endless growth capabilities. <br />My goal now is to find a company that will satisfy my passions for continuous learning and growth, coding, and helping others, while allowing a balanced work/family lifestyle.</p>
+                        <p>Hi, my name is Jesse Southerland.<br />I enjoy pushing myself to grow and learn new things, helping others, and just about any game you can throw at me. A few years ago I had the honor of becoming a father to a beautiful baby girl, which caused me to re-evaluate my long-term goals and what I really wanted out of life. That started me on a journey that led to the wonderful world of coding. <br />After I completed an immersive, project-based software development bootcamp, I found a new passion with endless growth capabilities. <br />My goal now is to find a company that will satisfy my passions for continuous learning and growth, and helping others, while allowing a balanced work/family lifestyle.</p>
                     </div>
                 </div>
 
