Updated resume format

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <section id="hero" class="d-flex flex-column justify-content-center">
         <div class="container" data-aos="zoom-in" data-aos-delay="100">
             <h1>Jesse Southerland</h1>
-            <p>I'm <span class="typed" data-typed-items="a father, a software developer, you're next employee?"></span></p>
+            <p>I'm <span class="typed" data-typed-items="a passionate software developer, a proud father, your next employee?"></span></p>
             <div class="social-links">
                 <a href="https://www.linkedin.com/in/jesse-southerland/" title="LinkedIn" class="linkedin"><i class="bx bxl-linkedin"><i class="ui-tooltip"></i></i></a>
                 <a href="assets/Resume.docx" title="Resume"><i class="bx bx-file"></i></a>
@@ -96,7 +96,7 @@
                     <div>
 
                         <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-                            <h3 class="text-center"><u>Creature</u></h3>
+                            <h3 class="text-center"><u>Creature - September 2021</u></h3>
                             <div class="portfolio-wrap">
                                 <img src="assets/img/portfolio/Capture4.jpg" class="img-fluid" alt="">
                                 <div class="portfolio-info">
@@ -112,7 +112,7 @@
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-                        <h3 class="text-center"><u>Guitar Heaven</u></h3><br />
+                        <h3 class="text-center"><u>Guitar Heaven - September 2021</u></h3><br />
                         <div class="portfolio-wrap">
                             <img src="assets/img/portfolio/Capture1.JPG" class="img-fluid" alt="">
                             <div class="portfolio-info">
@@ -129,7 +129,7 @@
                     </div>
 
                     <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-                        <h3 class="text-center"><u>Komodo Ins. App</u></h3><br />
+                        <h3 class="text-center"><u>Komodo Ins. App - October 2021</u></h3><br />
                         <div class="portfolio-wrap">
                             <img src="assets/img/portfolio/Capture2.JPG" class="img-fluid" alt="">
                             <div class="portfolio-info">
@@ -146,7 +146,7 @@
                     </div>
 
                     <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-                        <h3 class="text-center"><u>ZlorpShack Reading Program</u></h3><br />
+                        <h3 class="text-center"><u>ZlorpShack Reading Program - October 2021</u></h3><br />
                         <div class="portfolio-wrap">
                             <img src="assets/img/portfolio/Capture11.jpg" class="img-fluid" alt="">
                             <div class="portfolio-info">
@@ -163,7 +163,7 @@
                     </div>
 
                     <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-                        <h3 class="text-center"><u>Let's Jam</u></h3><br />
+                        <h3 class="text-center"><u>Let's Jam - November 2021</u></h3><br />
                         <div class="portfolio-wrap">
                             <img src="assets/img/portfolio/Capture3.JPG" class="img-fluid" alt="">
                             <div class="portfolio-info">
