--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <section id="hero" class="d-flex flex-column justify-content-center">
         <div class="container" data-aos="zoom-in" data-aos-delay="100">
             <h1>Jesse Southerland</h1>
-            <p>I'm <span class="typed" data-typed-items="a passionate software developer intent on delivering high quality work, a proud father intent on delivering a high quality childhood, your next employee? Connect with me below."></span></p>
+            <p>I'm <span class="typed" data-typed-items="a passionate software developer intent on delivering high quality work., a proud father intent on delivering a high quality childhood., your next employee? Connect with me below."></span></p>
             <div class="social-links">
                 <a href="https://www.linkedin.com/in/jesse-southerland/" title="LinkedIn" class="linkedin"><i class="bx bxl-linkedin"><i class="ui-tooltip"></i></i></a>
                 <a href="assets/Resume.docx" title="Resume"><i class="bx bx-file"></i></a>
